--- a/src/sass/layouts/_modal-settings.scss
+++ b/src/sass/layouts/_modal-settings.scss
@@ -6,6 +6,7 @@
   justify-content: center;
   align-items: center;
   width: 80%;
+  max-width: 550px;
   max-height: 80%;
   padding: 15px;
   overflow: auto;
