--- a/src/sass/layouts/savannah-game/_savannah-header.scss
+++ b/src/sass/layouts/savannah-game/_savannah-header.scss
@@ -50,7 +50,11 @@
   padding: 5px;
 
   background: white;
+  border: 1px solid white;
   border-radius: 50%;
+  &_active {
+    background: $main-color;
+  }
 }
 
 .savannah-microphone {
