--- a/src/sass/layouts/savannah-game/_gameStatModal.scss
+++ b/src/sass/layouts/savannah-game/_gameStatModal.scss
@@ -3,9 +3,11 @@
   justify-content: space-around;
   align-items: center;
   box-sizing: border-box;
-  width: 100%;
-  max-width: 784px;
+  width: 80%;
+  max-width: 700px;
   height: calc(100% - 100px);
+  max-height: 800px;
+  max-height: 800px;
   margin: 0 auto;
   padding: 15px 16px;
   overflow: auto;
@@ -16,12 +18,9 @@
   border: 1px solid #e6e9ee;
   border-radius: 8px;
 
-@include media-tablet {
-    max-width: 500px;
-  }
-
 @include media-mobile {
-    max-width: 300px;
+    width: 90%;
+    max-height: 450px;
   }
 }
 
@@ -71,7 +70,7 @@
     }
   }
   &__continue {
-    width: 200px;
+    width: 50%;
     margin: 0 auto;
     margin-top: 10px;
     padding: 10px 42px;
@@ -89,7 +88,9 @@
 
 @include media-mobile {
       width: 170;
+      width: 100%;
       margin-top: 0;
+      padding: 9px;
 
       font-size: 12px;
     }
@@ -102,10 +103,10 @@
     }
   }
   &__back {
-    margin-top: 20px;
+    margin-top: 10px;
 
     font-weight: 600;
-    font-size: 14px;
+    font-size: 1.5rem;
     line-height: 1.71;
     text-align: center;
     color: $main-color;
@@ -127,11 +128,10 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  width: 100%;
-
-// margin-top: 16px;
-
-  @include media-mobile {
+  width: 98%;
+  margin-bottom: 5px;
+  margin-left: 5px;
+@include media-mobile {
     margin-top: 0;
   }
 }
@@ -189,6 +189,8 @@
 
 .wrong_title,
 .correct_title {
+  margin-bottom: 10px;
+
   font-weight: 700;
 }
 
