--- a/src/sass/promo-page.scss
+++ b/src/sass/promo-page.scss
@@ -7,7 +7,7 @@
   font-family: "BurbankBigCondensed";
 
   src: local("burbank.ttf"),
-       url("../assets/fonts/for-promo-page/burbank.ttf") format("truetype");
+  url("../assets/fonts/for-promo-page/burbank.ttf") format("truetype");
 }
 .promo-container {
   width: 100%;
@@ -15,6 +15,17 @@
   height: 100%;
 
   background: #108cc1;
+  &__section {
+    width: 100%;
+
+    background: #37178d;
+    background: -webkit-linear-gradient(315deg,#37178d,#9a41ff);
+    background:      -o-linear-gradient(315deg,#37178d 0,#9a41ff 100%);
+    background:         linear-gradient(135deg,#37178d,#9a41ff);
+
+    -webkit-clip-path: polygon(0 0%, 100% 0, 100% 95%, 0% 100%);
+            clip-path: polygon(0 0%, 100% 0, 100% 95%, 0% 100%);
+  }
   &__game {
     position: relative;
 
@@ -79,13 +90,56 @@ img {
 
   border: 0;
 }
+.white-color {
+  color: #f3f3f3;
+}
+.promo-container__section .promo-container__description p {
+  color: #f3f3f3;
+}
+.features {
+  min-height: 363px;
+  padding-bottom: 219px;
+
+  background: #ea5455;
+  background: -webkit-linear-gradient(315deg,#ea5455,#feb692);
+  background:      -o-linear-gradient(315deg,#ea5455 0,#feb692 100%);
+  background:         linear-gradient(135deg,#ea5455,#feb692);
+
+  -webkit-clip-path: polygon(0 10%, 100% 0, 100% 100%, 0% 100%);
+          clip-path: polygon(0 10%, 100% 0, 100% 100%, 0% 100%);
+}
+.features .promo-container__title {
+  margin-top: 3em;
+}
+.structure .promo-container__title {
+  margin-top: 5.5em;
+}
+.structure {
+  margin-top: -224px;
+  padding-bottom: 219px;
+
+  background: #28c76f;
+  background: -webkit-linear-gradient(315deg,#28c76f,#81fbb8);
+  background:      -o-linear-gradient(315deg,#28c76f 0,#81fbb8 100%);
+  background:         linear-gradient(135deg,#28c76f,#81fbb8);
+
+  -webkit-clip-path: polygon(0 10em, 100% 0, 100% 100%, 0% 100%);
+          clip-path: polygon(0 10em, 100% 0, 100% 100%, 0% 100%);
+}
+.screen {
+  width: 90%;
+  margin-top: .7em;
+
+  border-radius: 1.5em;
+}
 @media only screen and (max-width: 550px) {
   .promo-container__game {
     width: 95%;
   }
   .promo-container__description p {
     width: 100%;
-    font-size: .89em;
+
+    font-size: 1.4em;
   }
   .promo-container__title {
     font-size: 1.3em;
