fix: fix bug with word statistic and setting modal

--- a/src/sass/components/_card.scss
+++ b/src/sass/components/_card.scss
@@ -84,6 +84,10 @@
     border: none;
     border-radius: 9px;
     outline: none;
+
+    &:disabled {
+      filter: saturate(.5);
+    }
   }
 
   &__btn-additional {
