--- a/src/sass/pages/_main.scss
+++ b/src/sass/pages/_main.scss
@@ -8,6 +8,8 @@
   @include font($size: 2.2rem, $height: 2.25rem, $weight: normal, $color: #0f1246);
 
   &__title {
+    margin: 0;
+
     font-size: 3.5rem;
     color: $user-info-title;
 
