--- a/src/sass/components/_card.scss
+++ b/src/sass/components/_card.scss
@@ -73,7 +73,8 @@
   }
 
   &__btn-primary,
-  &__btn-additional {
+  &__btn-additional,
+  &__btn-check {
     width: 220px;
     margin-bottom: 10px;
     padding: 7px 0;
@@ -86,7 +87,7 @@
     outline: none;
 
     &:disabled {
-      filter: saturate(.5);
+      filter: saturate(.3);
     }
   }
 
@@ -116,7 +117,7 @@
   &__btn-check {
     width: 270px;
 
-    background: #011627;
+    background: #008dff;
   }
 
   &__additional-buttons-container {
