--- a/src/sass/promo-page.scss
+++ b/src/sass/promo-page.scss
@@ -1,8 +1,10 @@
  .promo-container {
-  width: 100%;
-  min-width: 98.4vw;
+  min-width: 100vw;
   height: 100%;
 
+  background: #108cc1;
+
+.promo-container
   background: #108cc1;
   &__section {
     width: 100%;
