feat: add daily goal status

--- a/src/sass/pages/_main.scss
+++ b/src/sass/pages/_main.scss
@@ -32,6 +32,10 @@
     margin: 10px 0;
 
     color: $user-info-value;
+
+    &--invalid {
+      color: $user-info-subtitle;
+    }
   }
 
   &__button {
