--- a/src/sass/promo-page.scss
+++ b/src/sass/promo-page.scss
@@ -1,18 +1,22 @@
- .promo-container {
+.promo-container {
   min-width: 100vw;
   height: 100%;
 
-  background: #108cc1;
+  background: #148799;
+  background: -webkit-linear-gradient(315deg, #148799, #151f21);
+  background:      -o-linear-gradient(315deg, #148799 0, #151f21 100%);
+  background:         linear-gradient(135deg, #148799, #151f21);
+
   &__section {
     width: 100%;
 
-    background: #37178d;
-    background: -webkit-linear-gradient(315deg,#37178d,#9a41ff);
-    background:      -o-linear-gradient(315deg,#37178d 0,#9a41ff 100%);
-    background:         linear-gradient(135deg,#37178d,#9a41ff);
+    background: #1a535c;
+    background: -webkit-linear-gradient(315deg, #1a535c, #4ecdc4);
+    background:      -o-linear-gradient(315deg, #1a535c 0, #4ecdc4 100%);
+    background:         linear-gradient(135deg, #1a535c, #4ecdc4);
 
-    -webkit-clip-path: polygon(0 0%, 100% 0, 100% 98%, 0% 100%);
-            clip-path: polygon(0 0%, 100% 0, 100% 98%, 0% 100%);
+    -webkit-clip-path: polygon(0 0%, 100% 0, 100% 100%, 0% 99.7%);
+            clip-path: polygon(0 0%, 100% 0, 100% 100%, 0% 99.7%);
   }
   &__game {
     position: relative;
@@ -79,38 +83,49 @@ img {
   color: #f3f3f3;
 }
 .promo-container__section .promo-container__description p {
+  text-align: justify;
   color: #f3f3f3;
 }
 .features {
-  min-height: 363px;
-  padding-bottom: 219px;
+  padding-bottom: 5px;
 
   background: #ea5455;
-  background: -webkit-linear-gradient(315deg,#ea5455,#feb692);
-  background:      -o-linear-gradient(315deg,#ea5455 0,#feb692 100%);
-  background:         linear-gradient(135deg,#ea5455,#feb692);
+  background: -webkit-linear-gradient(315deg, #feb692, #ea5455);
+  background:      -o-linear-gradient(315deg, #feb692 0, #ea5455 100%);
+  background:         linear-gradient(135deg, #feb692, #ea5455);
 
-  -webkit-clip-path: polygon(0 10%, 100% 0, 100% 100%, 0% 100%);
-          clip-path: polygon(0 10%, 100% 0, 100% 100%, 0% 100%);
+  -webkit-clip-path: polygon(0 7%, 100% 0, 100% 100%, 0% 97%);
+          clip-path: polygon(0 7%, 100% 0, 100% 100%, 0% 97%);
 }
 .features .promo-container__title {
-  margin-top: 3em;
+  margin-top: 1.2em;
 }
 .structure .promo-container__title {
-  margin-top: 5.5em;
+  margin-top: .5em;
 }
-.structure {
-  margin-top: -224px;
-  padding-bottom: 219px;
 
-  background: #28c76f;
-  background: -webkit-linear-gradient(315deg,#28c76f,#53d38c);
-  background:      -o-linear-gradient(315deg,#28c76f 0,#53d38c 100%);
-  background:         linear-gradient(135deg,#28c76f,#53d38c);
-
-  -webkit-clip-path: polygon(0 10em, 100% 0, 100% 100%, 0% 100%);
-          clip-path: polygon(0 10em, 100% 0, 100% 100%, 0% 100%);
+.functionality .promo-container__title {
+  margin-top: 1.8em;
 }
+
+.functionality {
+  padding-bottom: 5px;
+
+  background: #db504a;
+  background: -webkit-linear-gradient(315deg, #db504a, #fd9898);
+  background:      -o-linear-gradient(315deg, #db504a 0, #fd9898 100%);
+  background:         linear-gradient(135deg, #db504a, #fd9898);
+
+  -webkit-clip-path: polygon(0 4%, 100% 0, 100% 96%, 0% 100%);
+          clip-path: polygon(0 4%, 100% 0, 100% 96%, 0% 100%);
+
+  &__image {
+    width: 280px;
+
+    border-radius: 1.5em;
+  }
+}
+
 .screen {
   width: 90%;
   margin-top: .7em;
@@ -140,10 +155,15 @@ img {
   border-width: 0;
   outline-width: 0;
 }
+
+.rules .promo-container__finish-text {
+  margin-bottom: 0;
+}
+
 @media only screen and (max-width: 550px) {
   .promo-container__video {
     width: 98%;
-   }
+  }
   .promo-container__game {
     width: 95%;
   }
