--- a/src/sass/components/_form.scss
+++ b/src/sass/components/_form.scss
@@ -56,6 +56,8 @@
   &__login-message {
     text-align: center;
 
+    cursor: pointer;
+
     @include font($size: 1.1rem, $weight: normal);
   }
 
